<resources>
    <string name="app_name">Smart Utility Meter</string>

    <!-- Strings related to login -->
    <string name="today">today</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>

    <string name="date">DATE</string>
    <string name="electricity_consunption">ELECTRICITY CONSUNPTION</string>
    <string name="description">Electricity Consumption Sum Of All Stations</string>
    <string name="main_page_title">Charging Pile Consumption</string>
    <string name="main_page_title_fu">Management System</string>
    <string name="main_page_bottom_title">QSP6 Smart Meter App @ Qike Yan</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login</string>
    <string name="attempts">Attempts Left:</string>
</resources>
